@@ -1,5 +1,10 @@
 2024-06-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
+	* testsuite/poke.pokefmt/pokefmt.exp (pokefmt_run): Catch
+	exceptional returns of `exec'.
+
+2024-06-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
 	* libpoke/pkl-ast.h (enum pkl_ast_code): Remove `PKL_AST_GCD'.
 
 2024-06-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
